EventList.  Entity list constructors can specify whether parent list.

--- a/Archivists' App/Model/SoundExplorers.Model.csproj
+++ b/Archivists' App/Model/SoundExplorers.Model.csproj
@@ -51,6 +51,7 @@
         <Compile Include="EntityColumnList.cs" />
         <Compile Include="EntityListBase.cs" />
         <Compile Include="EntityListFactory.cs" />
+        <Compile Include="EventList.cs" />
         <Compile Include="Global.cs" />
         <Compile Include="IEntityList.cs" />
         <Compile Include="Option.cs" />
