--- a/Archivists' App/Common/SoundExplorers.Common.csproj
+++ b/Archivists' App/Common/SoundExplorers.Common.csproj
@@ -43,7 +43,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="RowErrorEventArgs.cs" />
+        <Compile Include="RowErrorException.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="packages.config" />
