--- a/Archivists' App/Model/SoundExplorers.Model.csproj
+++ b/Archivists' App/Model/SoundExplorers.Model.csproj
@@ -47,16 +47,15 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="DatabaseConnection.cs" />
         <Compile Include="EntityColumn.cs" />
         <Compile Include="EntityColumnList.cs" />
         <Compile Include="EntityListBase.cs" />
-        <Compile Include="EntityListFactory.cs" />
         <Compile Include="EventList.cs" />
         <Compile Include="Global.cs" />
         <Compile Include="IEntityList.cs" />
         <Compile Include="Option.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="RowUpdatedEventArgs.cs" />
         <Compile Include="SetList.cs" />
     </ItemGroup>
     <ItemGroup>
