--- a/Archivists' App/Data/SoundExplorers.Data.csproj
+++ b/Archivists' App/Data/SoundExplorers.Data.csproj
@@ -92,6 +92,8 @@
     <Compile Include="EventType.cs" />
     <Compile Include="Genre.cs" />
     <Compile Include="IEntity.cs" />
+    <Compile Include="INamed.cs" />
+    <Compile Include="INotablyNamed.cs" />
     <Compile Include="IRelationInfo.cs" />
     <Compile Include="Key.cs" />
     <Compile Include="KeyComparer.cs" />
