--- a/Archivists' App/Tests/SoundExplorers.Tests.csproj
+++ b/Archivists' App/Tests/SoundExplorers.Tests.csproj
@@ -107,6 +107,7 @@
         <Compile Include="Data\TestSchema.cs" />
         <Compile Include="Data\TestSession.cs" />
         <Compile Include="Data\UserOptionTests.cs" />
+        <Compile Include="Model\NamedEntityListTests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
@@ -120,6 +121,10 @@
       <ProjectReference Include="..\Data\SoundExplorers.Data.csproj">
         <Project>{eb9dd1ae-4445-45c2-bd75-b27cf5a87642}</Project>
         <Name>SoundExplorers.Data</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\Model\SoundExplorers.Model.csproj">
+        <Project>{f49e2374-ef0d-46a3-ad01-6f52a5826473}</Project>
+        <Name>SoundExplorers.Model</Name>
       </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
