NamedEntityList tests WIP.  Entity lists are sorted when populated.

--- a/Archivists' App/Data/SoundExplorers.Data.csproj
+++ b/Archivists' App/Data/SoundExplorers.Data.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Artist.cs" />
     <Compile Include="Credit.cs" />
     <Compile Include="EntityBase.cs" />
+    <Compile Include="EntityComparer.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="EventType.cs" />
     <Compile Include="Genre.cs" />
