--- a/Archivists' App/Model/SoundExplorers.Model.csproj
+++ b/Archivists' App/Model/SoundExplorers.Model.csproj
@@ -50,21 +50,18 @@
     <ItemGroup>
         <Compile Include="DatabaseConfig.cs" />
         <Compile Include="DatabaseConnection.cs" />
+        <Compile Include="EntityBindingItemBase.cs" />
+        <Compile Include="EntityBindingList.cs" />
         <Compile Include="EntityColumn.cs" />
         <Compile Include="EntityColumnList.cs" />
         <Compile Include="EntityListBase.cs" />
-        <Compile Include="EventList.cs" />
         <Compile Include="EventTypeList.cs" />
         <Compile Include="Global.cs" />
         <Compile Include="IEntityList.cs" />
-        <Compile Include="LocationList.cs" />
+        <Compile Include="NamedBindingItem.cs" />
         <Compile Include="NamedEntityList.cs" />
-        <Compile Include="NewsletterList.cs" />
-        <Compile Include="NotablyNamedEntityList.cs" />
         <Compile Include="Option.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="SeriesList.cs" />
-        <Compile Include="SetList.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Common\SoundExplorers.Common.csproj">
