--- a/Archivists' App/Model/SoundExplorers.Model.csproj
+++ b/Archivists' App/Model/SoundExplorers.Model.csproj
@@ -48,18 +48,20 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="BindingItemBase.cs" />
         <Compile Include="DatabaseConfig.cs" />
         <Compile Include="DatabaseConnection.cs" />
-        <Compile Include="EntityBindingItemBase.cs" />
-        <Compile Include="EntityBindingList.cs" />
         <Compile Include="EntityColumn.cs" />
         <Compile Include="EntityColumnList.cs" />
         <Compile Include="EntityListBase.cs" />
         <Compile Include="EventTypeList.cs" />
         <Compile Include="Global.cs" />
         <Compile Include="IEntityList.cs" />
+        <Compile Include="LocationList.cs" />
         <Compile Include="NamedBindingItem.cs" />
         <Compile Include="NamedEntityList.cs" />
+        <Compile Include="NotablyNamedBindingItem.cs" />
+        <Compile Include="NotablyNamedEntityList.cs" />
         <Compile Include="Option.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
