--- a/Archivists' App/Tests/SoundExplorers.Tests.csproj
+++ b/Archivists' App/Tests/SoundExplorers.Tests.csproj
@@ -83,6 +83,8 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Controller\MockTableView.cs" />
+        <Compile Include="Controller\TableControllerTests.cs" />
         <Compile Include="Data\ActTests.cs" />
         <Compile Include="Data\ArtistTests.cs" />
         <Compile Include="Data\CreditTests.cs" />
