Text cell's cell's entire contents are selected on beginning edit or Ctrl+A.

--- a/Archivists' App/View/SoundExplorers.View.csproj
+++ b/Archivists' App/View/SoundExplorers.View.csproj
@@ -104,6 +104,7 @@
         <Compile Include="TableView.Designer.cs">
           <DependentUpon>TableView.cs</DependentUpon>
         </Compile>
+        <Compile Include="TextBoxCell.cs" />
         <EmbeddedResource Include="AboutForm.resx">
           <DependentUpon>AboutForm.cs</DependentUpon>
         </EmbeddedResource>
