On Date update error, allow error value to be modified.

--- a/Archivists' App/View/SoundExplorers.View.csproj
+++ b/Archivists' App/View/SoundExplorers.View.csproj
@@ -68,6 +68,7 @@
           <SubType>Component</SubType>
         </Compile>
         <Compile Include="IMessageUpdater.cs" />
+        <Compile Include="ICanRestoreErrorValue.cs" />
         <Compile Include="MainView.cs">
           <SubType>Form</SubType>
         </Compile>
