--- a/Archivists' App/Tests/SoundExplorers.Tests.csproj
+++ b/Archivists' App/Tests/SoundExplorers.Tests.csproj
@@ -111,6 +111,8 @@
         <Compile Include="Data\TestSchema.cs" />
         <Compile Include="Data\TestSession.cs" />
         <Compile Include="Data\UserOptionTests.cs" />
+        <Compile Include="Model\EventListTests.cs" />
+        <Compile Include="Model\LocationListTests.cs" />
         <Compile Include="Model\NamedEntityListTests.cs" />
         <Compile Include="Model\TestEditor.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
