--- a/Archivists' App/Model/SoundExplorers.Model.csproj
+++ b/Archivists' App/Model/SoundExplorers.Model.csproj
@@ -53,8 +53,8 @@
         <Compile Include="DatabaseConfig.cs" />
         <Compile Include="DatabaseConnection.cs" />
         <Compile Include="DatabaseUpdateErrorException.cs" />
-        <Compile Include="EntityColumn.cs" />
-        <Compile Include="EntityColumnList.cs" />
+        <Compile Include="BindingColumn.cs" />
+        <Compile Include="BindingColumnList.cs" />
         <Compile Include="EntityListBase.cs" />
         <Compile Include="EventBindingItem.cs" />
         <Compile Include="EventList.cs" />
