--- a/Archivists' App/Tests/SoundExplorers.Tests.csproj
+++ b/Archivists' App/Tests/SoundExplorers.Tests.csproj
@@ -84,9 +84,9 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Controller\MockTableView.cs" />
-        <Compile Include="Controller\TableControllerTests.cs" />
-        <Compile Include="Controller\TestTableController.cs" />
+        <Compile Include="Controller\MockEditorView.cs" />
+        <Compile Include="Controller\EditorControllerTests.cs" />
+        <Compile Include="Controller\TestEditorController.cs" />
         <Compile Include="Data\ActTests.cs" />
         <Compile Include="Data\ArtistTests.cs" />
         <Compile Include="Data\CreditTests.cs" />
