--- a/Archivists' App/View/SoundExplorers.View.csproj
+++ b/Archivists' App/View/SoundExplorers.View.csproj
@@ -76,11 +76,11 @@
           <DependentUpon>MainView.cs</DependentUpon>
         </Compile>
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="SelectTableView.cs">
+        <Compile Include="SelectEditorView.cs">
           <SubType>Form</SubType>
         </Compile>
-        <Compile Include="SelectTableView.Designer.cs">
-          <DependentUpon>SelectTableView.cs</DependentUpon>
+        <Compile Include="SelectEditorView.Designer.cs">
+          <DependentUpon>SelectEditorView.cs</DependentUpon>
         </Compile>
         <Compile Include="SizeableFormOptions.cs" />
         <Compile Include="SplashForm.cs">
@@ -95,11 +95,11 @@
         <Compile Include="SplashManager.cs">
           <SubType>Code</SubType>
         </Compile>
-        <Compile Include="TableView.cs">
+        <Compile Include="EditorView.cs">
           <SubType>Form</SubType>
         </Compile>
-        <Compile Include="TableView.Designer.cs">
-          <DependentUpon>TableView.cs</DependentUpon>
+        <Compile Include="EditorView.Designer.cs">
+          <DependentUpon>EditorView.cs</DependentUpon>
         </Compile>
         <Compile Include="TextBoxCell.cs" />
         <EmbeddedResource Include="AboutForm.resx">
@@ -109,14 +109,14 @@
           <DependentUpon>MainView.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="Properties\Resources.resx" />
-        <EmbeddedResource Include="SelectTableView.resx">
-          <DependentUpon>SelectTableView.cs</DependentUpon>
+        <EmbeddedResource Include="SelectEditorView.resx">
+          <DependentUpon>SelectEditorView.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="SplashForm.resx">
           <DependentUpon>SplashForm.cs</DependentUpon>
         </EmbeddedResource>
-        <EmbeddedResource Include="TableView.resx">
-          <DependentUpon>TableView.cs</DependentUpon>
+        <EmbeddedResource Include="EditorView.resx">
+          <DependentUpon>EditorView.cs</DependentUpon>
         </EmbeddedResource>
         <None Include="Images\Actions Document New 16x16.png" />
         <None Include="Images\Actions Document New 32x32.png" />
