EditorController tests WIP

--- a/Archivists' App/Tests/SoundExplorers.Tests.csproj
+++ b/Archivists' App/Tests/SoundExplorers.Tests.csproj
@@ -123,6 +123,7 @@
         <Compile Include="Model\TestDatabaseConfig.cs" />
         <Compile Include="Model\TestDatabaseConnection.cs" />
         <Compile Include="Model\TestEditor.cs" />
+        <Compile Include="Model\TestOption.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
