--- a/Archivists' App/Model/SoundExplorers.Model.csproj
+++ b/Archivists' App/Model/SoundExplorers.Model.csproj
@@ -49,6 +49,7 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="ActList.cs" />
         <Compile Include="BindingItemBase.cs" />
         <Compile Include="DatabaseConfig.cs" />
         <Compile Include="DatabaseConnection.cs" />
@@ -59,6 +60,7 @@
         <Compile Include="EventBindingItem.cs" />
         <Compile Include="EventList.cs" />
         <Compile Include="EventTypeList.cs" />
+        <Compile Include="GenreList.cs" />
         <Compile Include="Global.cs" />
         <Compile Include="IBindingItem.cs" />
         <Compile Include="IEntityList.cs" />
@@ -72,6 +74,8 @@
         <Compile Include="Option.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="SeriesList.cs" />
+        <Compile Include="SetBindingItem.cs" />
+        <Compile Include="SetList.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Common\SoundExplorers.Common.csproj">
