--- a/Archivists' App/Tests/SoundExplorers.Tests.csproj
+++ b/Archivists' App/Tests/SoundExplorers.Tests.csproj
@@ -119,6 +119,7 @@
         <Compile Include="Model\NamedEntityListTests.cs" />
         <Compile Include="Model\NewsletterListTests.cs" />
         <Compile Include="Model\OptionTests.cs" />
+        <Compile Include="Model\SetListTests.cs" />
         <Compile Include="Model\TestDatabaseConfig.cs" />
         <Compile Include="Model\TestDatabaseConnection.cs" />
         <Compile Include="Model\TestEditor.cs" />
