--- a/Archivists' App/Tests/SoundExplorers.Tests.csproj
+++ b/Archivists' App/Tests/SoundExplorers.Tests.csproj
@@ -85,6 +85,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Controller\ComboBoxCellControllerTests.cs" />
+        <Compile Include="Controller\MainControllerTests.cs" />
         <Compile Include="Controller\MockEditorView.cs" />
         <Compile Include="Controller\EditorControllerTests.cs" />
         <Compile Include="Controller\MockView.cs" />
@@ -92,6 +93,7 @@
         <Compile Include="Controller\SizeableFormOptionsControllerTests.cs" />
         <Compile Include="Controller\TestComboBoxCellController.cs" />
         <Compile Include="Controller\TestEditorController.cs" />
+        <Compile Include="Controller\TestMainController.cs" />
         <Compile Include="Controller\TestSizeableFormOptionsController.cs" />
         <Compile Include="Data\ActTests.cs" />
         <Compile Include="Data\ArtistTests.cs" />
@@ -123,6 +125,7 @@
         <Compile Include="Model\EntityListBaseTests.cs" />
         <Compile Include="Model\EventListTests.cs" />
         <Compile Include="Model\GlobalTests.cs" />
+        <Compile Include="Model\MockDatabaseConnection.cs" />
         <Compile Include="Model\NamedEntityListTests.cs" />
         <Compile Include="Model\NewsletterListTests.cs" />
         <Compile Include="Model\OptionTests.cs" />
