--- a/Archivists' App/Model/SoundExplorers.Model.csproj
+++ b/Archivists' App/Model/SoundExplorers.Model.csproj
@@ -73,6 +73,7 @@
         <Compile Include="NotablyNamedEntityList.cs" />
         <Compile Include="Option.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="ReferenceableItemList.cs" />
         <Compile Include="SeriesList.cs" />
         <Compile Include="SetBindingItem.cs" />
         <Compile Include="SetList.cs" />
