--- a/Archivists' App/View/packages.config
+++ b/Archivists' App/View/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="JetBrains.Annotations" version="2020.1.0" targetFramework="net472" />
+  <package id="JetBrains.Profiler.Api" version="1.1.7" targetFramework="net472" />
 </packages>
