Refactor: MainGrid & MainGridController classes added.

--- a/Archivists' App/View/SoundExplorers.View.csproj
+++ b/Archivists' App/View/SoundExplorers.View.csproj
@@ -76,6 +76,7 @@
         </Compile>
         <Compile Include="IMessageUpdater.cs" />
         <Compile Include="ICanRestoreErrorValue.cs" />
+        <Compile Include="MainGrid.cs" />
         <Compile Include="MainView.cs">
           <SubType>Form</SubType>
         </Compile>
