--- a/Archivists' App/Controller/SoundExplorers.Controller.csproj
+++ b/Archivists' App/Controller/SoundExplorers.Controller.csproj
@@ -49,6 +49,7 @@
         <Compile Include="IEditorView.cs" />
         <Compile Include="IView.cs" />
         <Compile Include="MainController.cs" />
+        <Compile Include="MainGridController.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="SelectEditorController.cs" />
         <Compile Include="SizeableFormOptionsController.cs" />
