--- a/Archivists' App/Tests/SoundExplorers.Tests.csproj
+++ b/Archivists' App/Tests/SoundExplorers.Tests.csproj
@@ -93,6 +93,7 @@
         <Compile Include="Controller\SizeableFormOptionsControllerTests.cs" />
         <Compile Include="Controller\TestEditorController.cs" />
         <Compile Include="Controller\TestMainController.cs" />
+        <Compile Include="Controller\TestMainGridController.cs" />
         <Compile Include="Controller\TestSizeableFormOptionsController.cs" />
         <Compile Include="Controller\ViewFactoryTests.cs" />
         <Compile Include="Data\ActTests.cs" />
