--- a/Archivists' App/View/SoundExplorers.View.csproj
+++ b/Archivists' App/View/SoundExplorers.View.csproj
@@ -74,6 +74,7 @@
         <Compile Include="FittedPictureBox.cs">
           <SubType>Component</SubType>
         </Compile>
+        <Compile Include="GridBase.cs" />
         <Compile Include="IMessageUpdater.cs" />
         <Compile Include="ICanRestoreErrorValue.cs" />
         <Compile Include="MainGrid.cs" />
@@ -83,6 +84,7 @@
         <Compile Include="MainView.Designer.cs">
           <DependentUpon>MainView.cs</DependentUpon>
         </Compile>
+        <Compile Include="ParentGrid.cs" />
         <Compile Include="PasteMenuItem.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="SelectAllMenuItem.cs" />
