--- a/Archivists' App/Model/SoundExplorers.Model.csproj
+++ b/Archivists' App/Model/SoundExplorers.Model.csproj
@@ -77,6 +77,7 @@
         <Compile Include="SeriesList.cs" />
         <Compile Include="SetBindingItem.cs" />
         <Compile Include="SetList.cs" />
+        <Compile Include="TypedBindingList.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Common\SoundExplorers.Common.csproj">
