--- a/Archivists' App/Model/SoundExplorers.Model.csproj
+++ b/Archivists' App/Model/SoundExplorers.Model.csproj
@@ -62,6 +62,7 @@
         <Compile Include="EventTypeList.cs" />
         <Compile Include="GenreList.cs" />
         <Compile Include="Global.cs" />
+        <Compile Include="IBindingItem.cs" />
         <Compile Include="IEntityList.cs" />
         <Compile Include="IOpen.cs" />
         <Compile Include="LocationList.cs" />
