--- a/Archivists' App/Controller/SoundExplorers.Controller.csproj
+++ b/Archivists' App/Controller/SoundExplorers.Controller.csproj
@@ -51,6 +51,7 @@
         <Compile Include="IView.cs" />
         <Compile Include="MainController.cs" />
         <Compile Include="MainGridController.cs" />
+        <Compile Include="ParentGridController.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="SelectEditorController.cs" />
         <Compile Include="SizeableFormOptionsController.cs" />
