--- a/Archivists' App/View/SoundExplorers.View.csproj
+++ b/Archivists' App/View/SoundExplorers.View.csproj
@@ -77,6 +77,7 @@
         </Compile>
         <Compile Include="GridBase.cs" />
         <Compile Include="GridContextMenu.cs" />
+        <Compile Include="EditContextMenuBase.cs" />
         <Compile Include="IMessageUpdater.cs" />
         <Compile Include="ICanRestoreErrorValue.cs" />
         <Compile Include="MainGrid.cs" />
@@ -116,7 +117,7 @@
           <DependentUpon>EditorView.cs</DependentUpon>
         </Compile>
         <Compile Include="TextBoxCell.cs" />
-        <Compile Include="CellTextBoxContextMenu.cs" />
+        <Compile Include="TextBoxContextMenu.cs" />
         <Compile Include="UndoMenuItem.cs" />
         <EmbeddedResource Include="AboutForm.resx">
           <DependentUpon>AboutForm.cs</DependentUpon>
