Edit & Grid menus: Select Row. Block edit/grid menu keyboard shortcut use outside valid context.

--- a/Archivists' App/View/SoundExplorers.View.csproj
+++ b/Archivists' App/View/SoundExplorers.View.csproj
@@ -97,6 +97,7 @@
         <Compile Include="SelectEditorView.Designer.cs">
           <DependentUpon>SelectEditorView.cs</DependentUpon>
         </Compile>
+        <Compile Include="SelectRowMenuItem.cs" />
         <Compile Include="SizeableFormOptions.cs" />
         <Compile Include="SplashForm.cs">
           <SubType>Form</SubType>
