New Cut, Copy & Paste toolbar buttons, phase 2 (Visual Studio)

--- a/Archivists' App/SoundExplorers.csproj
+++ b/Archivists' App/SoundExplorers.csproj
@@ -73,7 +73,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="SoundExplorers.View\SoundExplorers.View.csproj">
+    <ProjectReference Include="View\SoundExplorers.View.csproj">
       <Project>{09f2f432-dc9e-4638-9d5e-69753732150e}</Project>
       <Name>SoundExplorers.View</Name>
     </ProjectReference>
