--- a/Archivists' App/View/SoundExplorers.View.csproj
+++ b/Archivists' App/View/SoundExplorers.View.csproj
@@ -1,196 +1,204 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-    <PropertyGroup>
-        <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-        <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{09F2F432-DC9E-4638-9D5E-69753732150E}</ProjectGuid>
-        <OutputType>Library</OutputType>
-        <RootNamespace>SoundExplorers.View</RootNamespace>
-        <AssemblyName>SoundExplorers.View</AssemblyName>
-        <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-        <FileAlignment>512</FileAlignment>
-        <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-        <Deterministic>true</Deterministic>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-        <PlatformTarget>AnyCPU</PlatformTarget>
-        <DebugSymbols>true</DebugSymbols>
-        <DebugType>full</DebugType>
-        <Optimize>false</Optimize>
-        <OutputPath>bin\Debug\</OutputPath>
-        <DefineConstants>DEBUG;TRACE</DefineConstants>
-        <ErrorReport>prompt</ErrorReport>
-        <WarningLevel>4</WarningLevel>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-        <PlatformTarget>AnyCPU</PlatformTarget>
-        <DebugType>pdbonly</DebugType>
-        <Optimize>true</Optimize>
-        <OutputPath>bin\Release\</OutputPath>
-        <DefineConstants>TRACE</DefineConstants>
-        <ErrorReport>prompt</ErrorReport>
-        <WarningLevel>4</WarningLevel>
-    </PropertyGroup>
-    <ItemGroup>
-        <Reference Include="JetBrains.Annotations, Version=2020.1.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325">
-          <HintPath>..\packages\JetBrains.Annotations.2020.1.0\lib\net20\JetBrains.Annotations.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="JetBrains.Profiler.Api, Version=1.1.7.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325">
-          <HintPath>..\packages\JetBrains.Profiler.Api.1.1.7\lib\net471\JetBrains.Profiler.Api.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="System" />
-        <Reference Include="System.Core" />
-        <Reference Include="System.Xml.Linq" />
-        <Reference Include="System.Data.DataSetExtensions" />
-        <Reference Include="Microsoft.CSharp" />
-        <Reference Include="System.Data" />
-        <Reference Include="System.Deployment" />
-        <Reference Include="System.Drawing" />
-        <Reference Include="System.Net.Http" />
-        <Reference Include="System.Windows.Forms" />
-        <Reference Include="System.Xml" />
-    </ItemGroup>
-    <ItemGroup>
-        <Compile Include="AboutForm.cs">
-          <SubType>Form</SubType>
-        </Compile>
-        <Compile Include="AboutForm.Designer.cs">
-          <DependentUpon>AboutForm.cs</DependentUpon>
-        </Compile>
-        <Compile Include="CalendarCell.cs" />
-        <Compile Include="CalendarEditingControl.cs">
-          <SubType>Component</SubType>
-        </Compile>
-        <Compile Include="ComboBoxCell.cs" />
-        <Compile Include="ComboBoxEditingControl.cs">
-          <SubType>Component</SubType>
-        </Compile>
-        <Compile Include="CopyMenuItem.cs" />
-        <Compile Include="CutMenuItem.cs" />
-        <Compile Include="DeleteMenuItem.cs" />
-        <Compile Include="DeleteSelectedRowsMenuItem.cs" />
-        <Compile Include="FittedPictureBox.cs">
-          <SubType>Component</SubType>
-        </Compile>
-        <Compile Include="GridBase.cs" />
-        <Compile Include="GridContextMenu.cs" />
-        <Compile Include="EditContextMenuBase.cs" />
-        <Compile Include="IMessageUpdater.cs" />
-        <Compile Include="ICanRestoreErrorValue.cs" />
-        <Compile Include="MainGrid.cs" />
-        <Compile Include="MainView.cs">
-          <SubType>Form</SubType>
-        </Compile>
-        <Compile Include="MainView.Designer.cs">
-          <DependentUpon>MainView.cs</DependentUpon>
-        </Compile>
-        <Compile Include="ParentGrid.cs" />
-        <Compile Include="PasteMenuItem.cs" />
-        <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="SelectAllMenuItem.cs" />
-        <Compile Include="SelectEditorView.cs">
-          <SubType>Form</SubType>
-        </Compile>
-        <Compile Include="SelectEditorView.Designer.cs">
-          <DependentUpon>SelectEditorView.cs</DependentUpon>
-        </Compile>
-        <Compile Include="SelectRowMenuItem.cs" />
-        <Compile Include="SizeableFormOptions.cs" />
-        <Compile Include="SplashForm.cs">
-          <SubType>Form</SubType>
-        </Compile>
-        <Compile Include="SplashForm.Designer.cs">
-          <DependentUpon>SplashForm.cs</DependentUpon>
-        </Compile>
-        <Compile Include="SplashFormBase.cs">
-          <SubType>Form</SubType>
-        </Compile>
-        <Compile Include="SplashManager.cs">
-          <SubType>Code</SubType>
-        </Compile>
-        <Compile Include="EditorView.cs">
-          <SubType>Form</SubType>
-        </Compile>
-        <Compile Include="EditorView.Designer.cs">
-          <DependentUpon>EditorView.cs</DependentUpon>
-        </Compile>
-        <Compile Include="TextBoxCell.cs" />
-        <Compile Include="TextBoxContextMenu.cs" />
-        <Compile Include="UndoMenuItem.cs" />
-        <EmbeddedResource Include="AboutForm.resx">
-          <DependentUpon>AboutForm.cs</DependentUpon>
-        </EmbeddedResource>
-        <EmbeddedResource Include="MainView.resx">
-          <DependentUpon>MainView.cs</DependentUpon>
-        </EmbeddedResource>
-        <EmbeddedResource Include="Properties\Resources.resx" />
-        <EmbeddedResource Include="SelectEditorView.resx">
-          <DependentUpon>SelectEditorView.cs</DependentUpon>
-        </EmbeddedResource>
-        <EmbeddedResource Include="SplashForm.resx">
-          <DependentUpon>SplashForm.cs</DependentUpon>
-        </EmbeddedResource>
-        <EmbeddedResource Include="EditorView.resx">
-          <DependentUpon>EditorView.cs</DependentUpon>
-        </EmbeddedResource>
-        <None Include="Images\Actions Document New 16x16.png" />
-        <None Include="Images\Actions Document New 32x32.png" />
-        <None Include="Images\Actions Document New 48x48.png" />
-        <None Include="Images\Actions Document Open 16x16.png" />
-        <None Include="Images\Actions Document Open 32x32.png" />
-        <None Include="Images\Actions Document Open 48x48.png" />
-        <None Include="Images\Actions Edit Copy 16x16.png" />
-        <None Include="Images\Actions Edit Copy 32x32.png" />
-        <None Include="Images\Actions Edit Copy 48x48.png" />
-        <None Include="Images\Actions Edit Cut 16x16.png" />
-        <None Include="Images\Actions Edit Cut 32x32.png" />
-        <None Include="Images\Actions Edit Cut 48x48.png" />
-        <None Include="Images\Actions Edit Paste 16x16.png" />
-        <None Include="Images\Actions Edit Paste 32x32.png" />
-        <None Include="Images\Actions Edit Paste 48x48.png" />
-        <None Include="Images\Actions View Refresh 16x16.png" />
-        <None Include="Images\Actions View Refresh 32x32.png" />
-        <None Include="Images\Actions View Refresh 48x48.png" />
-        <None Include="Images\Copy Flatastic 32x32.png" />
-        <None Include="Images\Cut Flatastic 32x32.png" />
-        <None Include="Images\Devices Video Display 16x16.png" />
-        <None Include="Images\Devices Video Display 32x32.png" />
-        <None Include="Images\Devices Video Display 48x48.png" />
-        <None Include="Images\Fred Flintstone.jpg" />
-        <None Include="Images\Help and Support 16x16.png" />
-        <None Include="Images\Help and Support 32x32.png" />
-        <None Include="Images\Help and Support 48x48.png" />
-        <None Include="Images\Music Library 16x16.png" />
-        <None Include="Images\Music Library 32x32.png" />
-        <None Include="Images\Music Library 48x48.png" />
-        <None Include="Images\News 16x16.png" />
-        <None Include="Images\News 32x32.png" />
-        <None Include="Images\News 48x48.png" />
-        <None Include="Images\Paste Flatastic 32x32.png" />
-        <None Include="packages.config" />
-        <None Include="Properties\Settings.settings">
-            <Generator>SettingsSingleFileGenerator</Generator>
-            <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-        </None>
-        <Compile Include="Properties\Resources.Designer.cs" />
-        <Compile Include="Properties\Settings.Designer.cs">
-            <AutoGen>True</AutoGen>
-            <DependentUpon>Settings.settings</DependentUpon>
-            <DesignTimeSharedInput>True</DesignTimeSharedInput>
-        </Compile>
-    </ItemGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\Common\SoundExplorers.Common.csproj">
-        <Project>{24f52a9c-6679-4029-abfd-7eaa964cc945}</Project>
-        <Name>SoundExplorers.Common</Name>
-      </ProjectReference>
-      <ProjectReference Include="..\Controller\SoundExplorers.Controller.csproj">
-        <Project>{1df40f87-9462-4211-9f51-a15af63cb6ae}</Project>
-        <Name>SoundExplorers.Controller</Name>
-      </ProjectReference>
-    </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+  <PropertyGroup>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{09F2F432-DC9E-4638-9D5E-69753732150E}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <RootNamespace>SoundExplorers.View</RootNamespace>
+    <AssemblyName>SoundExplorers.View</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <Deterministic>true</Deterministic>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="JetBrains.Annotations, Version=2020.1.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325">
+      <HintPath>..\packages\JetBrains.Annotations.2020.1.0\lib\net20\JetBrains.Annotations.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="JetBrains.Profiler.Api, Version=1.1.7.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325">
+      <HintPath>..\packages\JetBrains.Profiler.Api.1.1.7\lib\net471\JetBrains.Profiler.Api.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="AboutForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AboutForm.Designer.cs">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CalendarCell.cs" />
+    <Compile Include="CalendarEditingControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ComboBoxCell.cs" />
+    <Compile Include="ComboBoxEditingControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="CopyMenuItem.cs" />
+    <Compile Include="CutMenuItem.cs" />
+    <Compile Include="DeleteMenuItem.cs" />
+    <Compile Include="DeleteSelectedRowsMenuItem.cs" />
+    <Compile Include="FittedPictureBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="GridBase.cs" />
+    <Compile Include="GridContextMenu.cs" />
+    <Compile Include="EditContextMenuBase.cs" />
+    <Compile Include="IMessageUpdater.cs" />
+    <Compile Include="ICanRestoreErrorValue.cs" />
+    <Compile Include="MainGrid.cs" />
+    <Compile Include="MainView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainView.Designer.cs">
+      <DependentUpon>MainView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ParentGrid.cs" />
+    <Compile Include="PasteMenuItem.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="SelectAllMenuItem.cs" />
+    <Compile Include="SelectEditorView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SelectEditorView.Designer.cs">
+      <DependentUpon>SelectEditorView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SelectRowMenuItem.cs" />
+    <Compile Include="SizeableFormOptions.cs" />
+    <Compile Include="SplashForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SplashForm.Designer.cs">
+      <DependentUpon>SplashForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SplashFormBase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SplashManager.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="EditorView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditorView.Designer.cs">
+      <DependentUpon>EditorView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TextBoxCell.cs" />
+    <Compile Include="TextBoxContextMenu.cs" />
+    <Compile Include="UndoMenuItem.cs" />
+    <EmbeddedResource Include="AboutForm.resx">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainView.resx">
+      <DependentUpon>MainView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources1.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SelectEditorView.resx">
+      <DependentUpon>SelectEditorView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SplashForm.resx">
+      <DependentUpon>SplashForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditorView.resx">
+      <DependentUpon>EditorView.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="Images\Actions Document New 16x16.png" />
+    <None Include="Images\Actions Document New 32x32.png" />
+    <None Include="Images\Actions Document New 48x48.png" />
+    <None Include="Images\Actions Document Open 16x16.png" />
+    <None Include="Images\Actions Document Open 32x32.png" />
+    <None Include="Images\Actions Document Open 48x48.png" />
+    <None Include="Images\Actions Edit Copy 16x16.png" />
+    <None Include="Images\Actions Edit Copy 32x32.png" />
+    <None Include="Images\Actions Edit Copy 48x48.png" />
+    <None Include="Images\Actions Edit Cut 16x16.png" />
+    <None Include="Images\Actions Edit Cut 32x32.png" />
+    <None Include="Images\Actions Edit Cut 48x48.png" />
+    <None Include="Images\Actions Edit Paste 16x16.png" />
+    <None Include="Images\Actions Edit Paste 32x32.png" />
+    <None Include="Images\Actions Edit Paste 48x48.png" />
+    <None Include="Images\Actions View Refresh 16x16.png" />
+    <None Include="Images\Actions View Refresh 32x32.png" />
+    <None Include="Images\Actions View Refresh 48x48.png" />
+    <None Include="Images\Copy Flatastic 32x32.png" />
+    <None Include="Images\Cut Flatastic 32x32.png" />
+    <None Include="Images\Devices Video Display 16x16.png" />
+    <None Include="Images\Devices Video Display 32x32.png" />
+    <None Include="Images\Devices Video Display 48x48.png" />
+    <None Include="Images\Fred Flintstone.jpg" />
+    <None Include="Images\Help and Support 16x16.png" />
+    <None Include="Images\Help and Support 32x32.png" />
+    <None Include="Images\Help and Support 48x48.png" />
+    <None Include="Images\Music Library 16x16.png" />
+    <None Include="Images\Music Library 32x32.png" />
+    <None Include="Images\Music Library 48x48.png" />
+    <None Include="Images\News 16x16.png" />
+    <None Include="Images\News 32x32.png" />
+    <None Include="Images\News 48x48.png" />
+    <None Include="Images\Paste Flatastic 32x32.png" />
+    <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Resources.Designer.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\SoundExplorers.Common.csproj">
+      <Project>{24f52a9c-6679-4029-abfd-7eaa964cc945}</Project>
+      <Name>SoundExplorers.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Controller\SoundExplorers.Controller.csproj">
+      <Project>{1df40f87-9462-4211-9f51-a15af63cb6ae}</Project>
+      <Name>SoundExplorers.Controller</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
