--- a/Archivists' App/Tests/SoundExplorers.Tests.csproj
+++ b/Archivists' App/Tests/SoundExplorers.Tests.csproj
@@ -90,11 +90,13 @@
         <Compile Include="Controller\EditorControllerTests.cs" />
         <Compile Include="Controller\MockMainGrid.cs" />
         <Compile Include="Controller\MockView.cs" />
+        <Compile Include="Controller\OptionsControllerTests.cs" />
         <Compile Include="Controller\SelectEditorControllerTests.cs" />
         <Compile Include="Controller\SizeableFormOptionsControllerTests.cs" />
         <Compile Include="Controller\TestEditorController.cs" />
         <Compile Include="Controller\TestMainController.cs" />
         <Compile Include="Controller\TestMainGridController.cs" />
+        <Compile Include="Controller\TestOptionsController.cs" />
         <Compile Include="Controller\TestSizeableFormOptionsController.cs" />
         <Compile Include="Controller\ViewFactoryTests.cs" />
         <Compile Include="Data\ActTests.cs" />
@@ -128,6 +130,7 @@
         <Compile Include="Model\ErrorThrowingEventType.cs" />
         <Compile Include="Model\EventListTests.cs" />
         <Compile Include="Model\GlobalTests.cs" />
+        <Compile Include="Model\MockDatabaseConfig.cs" />
         <Compile Include="Model\MockDatabaseConnection.cs" />
         <Compile Include="Model\NamedEntityListTests.cs" />
         <Compile Include="Model\NewsletterListTests.cs" />
