--- a/Archivists' App/Tests/SoundExplorers.Tests.csproj
+++ b/Archivists' App/Tests/SoundExplorers.Tests.csproj
@@ -122,6 +122,9 @@
     <PackageReference Include="JetBrains.Annotations">
       <Version>2020.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.NET.Test.Sdk">
+      <Version>16.8.3</Version>
+    </PackageReference>
     <PackageReference Include="NUnit">
       <Version>3.12.0</Version>
     </PackageReference>
