--- a/Archivists' App/Tests/SoundExplorers.Tests.csproj
+++ b/Archivists' App/Tests/SoundExplorers.Tests.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="NUnit">
       <Version>3.12.0</Version>
     </PackageReference>
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="VelocityDB">
       <Version>9.1.2</Version>
     </PackageReference>
