.Net 5 Migration: SoundExplorers project converted, fixed conversion warnings, compiles no warnings

--- a/Archivists' App/View/SoundExplorers.View.csproj
+++ b/Archivists' App/View/SoundExplorers.View.csproj
@@ -30,7 +30,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-  </ItemGroup>  <ItemGroup>
+  </ItemGroup>  
+  <ItemGroup>
     <ProjectReference Include="..\Controller\SoundExplorers.Controller.csproj" />
   </ItemGroup>
   <ItemGroup>
