--- a/Archivists' App/Tests/SoundExplorers.Tests.csproj
+++ b/Archivists' App/Tests/SoundExplorers.Tests.csproj
@@ -1,14 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
-    <UseWindowsForms>true</UseWindowsForms>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>SoundExplorers.Tests</RootNamespace>
     <AssemblyName>SoundExplorers.Tests</AssemblyName>
   </PropertyGroup>
-
+  <PropertyGroup>
+    <AssemblyVersion>2021.1.0</AssemblyVersion>
+    <Title>Sound Explorers Audio Archive (Tests Library)</Title>
+    <Company>Sound and Light Exploration Society</Company>
+    <Product>Sound Explorers Audio Archive</Product>
+    <Copyright>Copyright © 2021 Sound and Light Exploration Society</Copyright>
+  </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Controller\SoundExplorers.Controller.csproj" />
     <ProjectReference Include="..\Data\SoundExplorers.Data.csproj" />
