--- a/Archivists' App/Data/SoundExplorers.Data.csproj
+++ b/Archivists' App/Data/SoundExplorers.Data.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <RootNamespace>SoundExplorers.Data</RootNamespace>
     <AssemblyName>SoundExplorers.Data</AssemblyName>
   </PropertyGroup>
   <PropertyGroup>
+    <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs. -->
     <AssemblyVersion>2021.1.0</AssemblyVersion>
     <Title>Sound Explorers Audio Archive (Data Library)</Title>
     <Company>Sound and Light Exploration Society</Company>
