--- a/Archivists' App/SoundExplorers/SoundExplorers.csproj
+++ b/Archivists' App/SoundExplorers/SoundExplorers.csproj
@@ -4,10 +4,16 @@
         <OutputType>WinExe</OutputType>
         <TargetFramework>net5.0-windows</TargetFramework>
         <UseWindowsForms>true</UseWindowsForms>
+        <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
 		<RootNamespace>SoundExplorers</RootNamespace>
 		<AssemblyName>SoundExplorers</AssemblyName>
     </PropertyGroup>
     <PropertyGroup>
+        <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs.
+        In .Net 5, Application.ProductVersion comes from the InformationalVersion
+        assembly property, not the ProductVersion property. -->
+        <InformationalVersion>2021.1.0</InformationalVersion>
+        <ProductVersion>2021.1.0</ProductVersion>
         <AssemblyVersion>2021.1.0</AssemblyVersion>
         <Title>Sound Explorers Audio Archive</Title>
         <Company>Sound and Light Exploration Society</Company>
