--- a/Archivists' App/View/SoundExplorers.View.csproj
+++ b/Archivists' App/View/SoundExplorers.View.csproj
@@ -3,10 +3,12 @@
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <RootNamespace>SoundExplorers.View</RootNamespace>
     <AssemblyName>SoundExplorers.View</AssemblyName>
   </PropertyGroup>
   <PropertyGroup>
+    <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs. -->
     <AssemblyVersion>2021.1.0</AssemblyVersion>
     <Title>Sound Explorers Audio Archive (View Library)</Title>
     <Company>Sound and Light Exploration Society</Company>
